# chaextractor

./: .gitignore  AGENTS.md  CLAUDE.md  HISTORY.md  INSTRUCTIONS.md  README.md  index.html  package-lock.json  package.json  parse_kakao_chat.py  pyproject.toml
.agents/skills/chaextractor-maintainer/: SKILL.md
.agents/skills/chaextractor-tester/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.yml
assets/: version.json
assets/scripts/: app.js  chat-core.js  chat-domain.js
assets/styles/: app.css
harness/: BACKLOG.md  DECISIONS.md  DOMAIN_RULES.md  MANIFEST.md  README.md  REQUIREMENTS.md  TESTING.md
harness/browser/: playwright.config.js  smoke.spec.js
harness/reviews/: 2026-05-17.md
harness/scripts/: check_cache_date_sort.py  check_cache_privacy.py  check_capability_notice.py  check_diagnostic_report.py  check_doc_drift.py  check_input_bundle.py  check_modal_escape.py  check_performance_smoke.py  check_ui_smoke.py  parse_with_index.mjs  run_parser_golden.py
scripts/: start-local-server.ps1  start-local-server.sh
test/fixtures/android-files/: KakaoTalkChats.txt
test/fixtures/ios-minimal/: Talk_2026.1.27 21_37-1.txt
test/fixtures/ios-missing-photo/: Talk_2026.4.8 16_20-1.txt
test/fixtures/ios-zip-minimal/: Talk_2026.6.10 09_30-1.txt
test/parser-golden/: android-files.json  android-sample.json  ios-minimal.json  ios-missing-photo-guidance.json  ios-zip-minimal.json  macos-csv.json  security-xss.json  windows-attachments-unsupported.json  windows-minimal.json
tools/: README.md  __init__.py  parse_kakao_chat.py
(+4 files in other folders)
