[project]
name = "chaextractor"
version = "0.1.0"
description = "카카오톡 오픈채팅방 대화 분석 도구"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
parse-chat = "tools.parse_kakao_chat:main"

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
